# Hakyllsite

./: .gitignore  .gitmodules  404.html  404.md  about.md  bib_style.csl  hakyll-blog.cabal  hakylltest.cabal  index.html  makefile  math-macros.tex  opt-fonts.py  readme.md  reference.bib  site.hs
_site/: 404.html  about.html  archive.html  contact.html  draft.html  index.html  notes.html  sitemap.xml  tags.html
css/: chao-theorems.css  default.css  fonts.css  original.css  pygentize.css  sidenotes.css
includes/: beamerthemeSimple.sty
katex/: README.md  katex.css
notes/: MWU.md  amnesia.md  biased_graph.md  flow_over_time.md  kcut.md  metric_embedding.md  points_in_general_position.md  sudoku_matroid.md  ultrametric_embedding.md
post.draft/: 2024-07-12-homo*.md
posts/: 2021-11-22-kmp与数字逻辑模式串识别.md  2021-11-30-DynamicReachability.md  2021-12-06-单侧的参数假设检验的拒绝域.md  2022-02-15-Stoer-Wagner-proof.md  2022-05-04-Primal_Dual_Method.md  2022-09-25-k-level.md  (+86 more)
posts.draft/: 2024-08-02-submod-matroid.md  2024-09-20-fixed-dimension-LP.md  2024-09-24-sagemath-vscode.md  2024-10-10-color-refinement.md  2024-11-02-matroid-representation.md  connectivity_interdiction.md  homo-&cat-.md  matroid-representation.md  sagemath-vscode.md
posts.old/: 2015-08-12-spqr.markdown  2015-12-07-tu-quoque.markdown  2021-11-22-kmp与数字逻辑模式串识别.md  2021-11-30-DynamicReachability.md  2022-05-05-BipartiteGraphDrawing.md  2022-07-08-incentive-allocation.md  2022-12-17-LaminarMatroid.md  2023-03-02-HallsTheorem.md  2023-05-03-shiftingcards.md  2023-09-27-strongorderable.md  2023-10-02-matroidminor.md
(+154 files in other folders)
