name:               hakylltest
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10


executable site
  main-is:          site.hs
  build-depends:    base >=4.9 && <5
                  , hakyll == 4.16.*
                  , pandoc >= 2.7.3
                  , pandoc-types >= 1.22.1
                  , containers >= 0.6
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
